chore: add some fixes

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
       <div id="score"></div>
       <div id="lives"></div>
     </div>
-
     <div class="twinkling"></div>
 
-    <main id="stats">
+    <main id="start">
       <h1 id="title">Arcanoid</h1>
-      <section class="levels">
+      <section id="levels">
         <button class="levels__button">1</button>
         <button class="levels__button" disabled="true">2</button>
         <button class="levels__button" disabled="true">3</button>
