build: add webpack

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       href="https://fonts.googleapis.com/css2?family=Stalinist+One&display=swap"
       rel="stylesheet"
     />
-    <script src="src/app/App.js" defer type="module"></script>
     <title>Arcanoid</title>
   </head>
   <body>
@@ -23,22 +22,22 @@
     <main id="start">
       <h1 id="title">Arcanoid</h1>
       <section id="levels">
-        <button class="levels__button">1</button>
-        <button class="levels__button" disabled="true">2</button>
-        <button class="levels__button" disabled="true">3</button>
-        <button class="levels__button" disabled="true">4</button>
-        <button class="levels__button" disabled="true">5</button>
-        <button class="levels__button" disabled="true">6</button>
-        <button class="levels__button" disabled="true">7</button>
-        <button class="levels__button" disabled="true">8</button>
-        <button class="levels__button" disabled="true">9</button>
-        <button class="levels__button" disabled="true">10</button>
-        <button class="levels__button" disabled="true">11</button>
-        <button class="levels__button" disabled="true">12</button>
-        <button class="levels__button" disabled="true">13</button>
-        <button class="levels__button" disabled="true">14</button>
-        <button class="levels__button" disabled="true">15</button>
-        <button class="levels__button" disabled="true">16</button>
+        <button class="levels-button">1</button>
+        <button class="levels-button" disabled="true">2</button>
+        <button class="levels-button" disabled="true">3</button>
+        <button class="levels-button" disabled="true">4</button>
+        <button class="levels-button" disabled="true">5</button>
+        <button class="levels-button" disabled="true">6</button>
+        <button class="levels-button" disabled="true">7</button>
+        <button class="levels-button" disabled="true">8</button>
+        <button class="levels-button" disabled="true">9</button>
+        <button class="levels-button" disabled="true">10</button>
+        <button class="levels-button" disabled="true">11</button>
+        <button class="levels-button" disabled="true">12</button>
+        <button class="levels-button" disabled="true">13</button>
+        <button class="levels-button" disabled="true">14</button>
+        <button class="levels-button" disabled="true">15</button>
+        <button class="levels-button" disabled="true">16</button>
       </section>
       <div id="total">0</div>
     </main>
